unpackaged/main/default/objects/ApplicantEmployment__c/ApplicantEmployment__c.object-meta.xml
<CustomObject>
    <label>Applicant Employment</label>
    <nameField>
        <displayFormat>AEM-{0000}</displayFormat>
        <label>Applicant Employment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicant Employments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>