unpackaged/main/default/objects/ApplicantEmployment__c/fields/BaseSalary__c.field-meta.xml
<CustomField>
    <fullName>BaseSalary__c</fullName>
    <label>Base Salary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>