unpackaged/main/default/objects/ApplicantEmployment__c/fields/CurrentJobOver12Months__c.field-meta.xml
<CustomField>
    <fullName>CurrentJobOver12Months__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Over 12 months with current employer?</label>
    <type>Checkbox</type>
</CustomField>