unpackaged/main/default/objects/ApplicantEmployment__c/fields/hasIncomeReduced__c.field-meta.xml
<CustomField>
    <fullName>hasIncomeReduced__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Income reduced in last 6 months?</label>
    <type>Checkbox</type>
</CustomField>