unpackaged/main/default/objects/ApplicantEmployment__c/fields/IncomeChangeReason__c.field-meta.xml
<CustomField>
    <fullName>IncomeChangeReason__c</fullName>
    <label>Income Change Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I am going into the retirement</fullName>
            </value>
            <value>
                <fullName>I am going on maternity leave</fullName>
            </value>
            <value>
                <fullName>I am taking an extended period of leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>