unpackaged/main/default/objects/ApplicantEmployment__c/fields/IncomeMayChange__c.field-meta.xml
<CustomField>
    <fullName>IncomeMayChange__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Antecipate income reducing in 12 months?</label>
    <type>Checkbox</type>
</CustomField>