unpackaged/main/default/objects/ApplicantEmployment__c/fields/IncomeReduction__c.field-meta.xml
<CustomField>
    <fullName>IncomeReduction__c</fullName>
    <label>Income Reduction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Less than 20%</fullName>
            </value>
            <value>
                <fullName>More than 20%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>