unpackaged/main/default/objects/ApplicantEmployment__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture, Forestry and Fishing</fullName>
                <default>true</default>
                <label>Agriculture, Forestry and Fishing</label>
            </value>
            <value>
                <fullName>Mining</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Electricity, Gas, Water and Waste Services</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Wholesale Trade</fullName>
            </value>
            <value>
                <fullName>Retail Trade</fullName>
            </value>
            <value>
                <fullName>Accommodation and Food Services</fullName>
            </value>
            <value>
                <fullName>Transport, Postal and Warehousing</fullName>
            </value>
            <value>
                <fullName>Information Media and Telecommunications</fullName>
            </value>
            <value>
                <fullName>Financial and Insurance Services</fullName>
            </value>
            <value>
                <fullName>Rental, Hiring and Real Estate Services</fullName>
            </value>
            <value>
                <fullName>Professional, Scientific and Technical Services</fullName>
            </value>
            <value>
                <fullName>Administrative and Support Services</fullName>
            </value>
            <value>
                <fullName>Public Administration and Safety</fullName>
            </value>
            <value>
                <fullName>Education and Training</fullName>
            </value>
            <value>
                <fullName>Health Care and Social Assistance</fullName>
            </value>
            <value>
                <fullName>Arts and Recreation Services</fullName>
            </value>
            <value>
                <fullName>Other Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>