unpackaged/main/default/objects/ApplicantEmployment__c/fields/IsGovernmentalBody__c.field-meta.xml
<CustomField>
    <fullName>IsGovernmentalBody__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Governmental Body</label>
    <type>Checkbox</type>
</CustomField>