unpackaged/main/default/objects/ApplicantEmployment__c/fields/MonthlyOtherIncomeAmount__c.field-meta.xml
<CustomField>
    <fullName>MonthlyOtherIncomeAmount__c</fullName>
    <label>Monthly Other Income Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>