unpackaged/main/default/objects/ApplicantEmployment__c/fields/SubIndustry__c.field-meta.xml
<CustomField>
    <fullName>SubIndustry__c</fullName>
    <label>Sub Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Industry__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Agriculture</fullName>
            </value>
            <value>
                <fullName>Aquaculture</fullName>
            </value>
            <value>
                <fullName>Forestry and Logging</fullName>
            </value>
            <value>
                <fullName>Fishing, Hunting and Trapping</fullName>
            </value>
            <value>
                <fullName>Agriculture, Forestry and Fishing Support Services</fullName>
            </value>
            <value>
                <fullName>Coal Mining</fullName>
            </value>
            <value>
                <fullName>Oil and Gas Extraction</fullName>
            </value>
            <value>
                <fullName>Metal Ore Mining</fullName>
            </value>
            <value>
                <fullName>Non-Metallic Mineral Mining and Quarrying</fullName>
            </value>
            <value>
                <fullName>Exploration and Other Mining Support Services</fullName>
            </value>
            <value>
                <fullName>Food Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Beverage and Tobacco Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Textile, Leather, Clothing and Footwear Manufacturing</fullName>
            </value>
            <value>
                <fullName>Wood Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Pulp, Paper and Converted Paper Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Printing (including the Reproduction of Recorded Media)</fullName>
            </value>
            <value>
                <fullName>Petroleum and Coal Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Basic Chemical and Chemical Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Polymer Product and Rubber Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Non-Metallic Mineral Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Primary Metal and Metal Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Fabricated Metal Product Manufacturing</fullName>
            </value>
            <value>
                <fullName>Transport Equipment Manufacturing</fullName>
            </value>
            <value>
                <fullName>Machinery and Equipment Manufacturing</fullName>
            </value>
            <value>
                <fullName>Furniture and Other Manufacturing</fullName>
            </value>
            <value>
                <fullName>Electricity Supply</fullName>
            </value>
            <value>
                <fullName>Gas Supply</fullName>
            </value>
            <value>
                <fullName>Water Supply, Sewerage and Drainage Services</fullName>
            </value>
            <value>
                <fullName>Waste Collection, Treatment and Disposal Services</fullName>
            </value>
            <value>
                <fullName>Building Construction</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>